@@ -1,30 +1,6 @@
 bascat
 *~
 *.o
-tags
-.deps/
-Makefile
-Makefile.in
-aclocal.m4
-autom4te.cache/
-autoscan.log
-*.info
-compile
 config.h
-config.h.in
-config.log
-config.status
-configure
-configure.scan
-depcomp
-install-sh
-mdate-sh
-missing
-stamp-h1
-stamp-vti
-texinfo.tex
-version.texi
-/*.tar.gz
-/test-driver
-/tests/*.log
-/tests/*.trs
+bascat.1
+Makefile
